# Sarus

./: .gitignore  Cargo.toml  DESIGN_DOC.md  README.md  build.rs  sarus_language_doc.md  sarus_language_doc.md.skt.md
benches/: benchmark.rs  dynamic_dispatch_benchmark.rs
examples/: bools  libc_math  multiple_returns  parentheses  run_file.rs  run_file_no_validate.rs  run_multiple_strings.rs  run_string.rs  run_string_separate_process.rs  test
src/: frontend.rs  function_translator.rs  graph.rs  jit.rs  lib.rs  logging.rs  sarus_std_lib.rs  structs.rs  validator.rs  variables.rs
tests/: deep_stack_test.rs  graph_test.rs  integration_test.rs  skeptic.rs
tests/resources/: include_test.sarus  include_test2.sarus
