[package]
authors = ["The Cranelift Project Developers"]
description = "Toy language implemented using cranelift-jit"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
name = "cranelift-jit-demo"
repository = "https://github.com/bytecodealliance/cranelift-jit-demo"
version = "0.0.0"

[dependencies]
anyhow = "1.0.43"
cranelift = "0.76.0"
cranelift-jit = "0.76.0"
cranelift-module = "0.76.0"
non-empty-vec = "0.2.0"
peg = "0.7"
thiserror = "1.0.29"

[dev-dependencies]
basic-audio-filters = {git = "https://github.com/DGriffin91/rust-basic-audio-filters", branch = "f64"}
hound = "3.4.0"


[[example]]
name = "run_file"

[[example]]
name = "run_file_no_validate"

[[example]]
name = "run_string"

[[example]]
name = "run_multiple_strings"
