[package]
authors = ["The Sarus Project Developers"]
description = "A jit engine using cranelift"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
name = "sarus"
repository = "https://github.com/DGriffin91/sarus/"
version = "0.0.0"

[dependencies]
anyhow = "1.0.43"
cranelift = "0.76.0"
cranelift-jit = "0.76.0"
cranelift-module = "0.76.0"
cranelift-native = "0.76.0"
non-empty-vec = "0.2.0"
peg = "0.7"
thiserror = "1.0"
toposort-scc = "0.5.4"
toml = "0.5"
serde = {version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = {version = "0.2", features = ["fmt", "json"]}
tracing-core = "0.1"
tracing-appender = "0.1"
dunce = "1.0"


[dev-dependencies]
basic-audio-filters = {git = "https://github.com/DGriffin91/rust-basic-audio-filters"}
hound = "3.4.0"
mitosis = "0.1.1"


[[example]]
name = "run_file"

[[example]]
name = "run_multiple_strings"
